Bug 608887 - elements inserted outside the body aren't accessible, r=marcoz, davidb, a=final+